[gd_scene load_steps=4 format=3 uid="uid://cy2y386b32q71"]

[ext_resource type="Script" uid="uid://08c0q3pvmh5v" path="res://InterviewPopup.gd" id="1_gourt"]
[ext_resource type="Texture2D" uid="uid://dyl5jaxqmkv30" path="res://Assets/Avatars/emp2.png" id="2_d64n1"]
[ext_resource type="Texture2D" uid="uid://ljxrxla5cy4r" path="res://Assets/Avatars/emp1.png" id="3_5i2k0"]

[node name="PopupPanel" type="Window"]
size = Vector2i(800, 600)
script = ExtResource("1_gourt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 144.0
offset_top = 38.0
offset_right = 644.0
offset_bottom = 438.0

[node name="Question1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Q1: How do you handle unexpected vacuum encounters in the workplace?"
autowrap_mode = 3

[node name="Question2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Q2: \"Can you describe a time you knocked something off a shelf on purpose?\"
"
autowrap_mode = 3

[node name="Question3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Q3: \"Whatâ€™s your stance on belly rubs. firmly yes, or a trap?\"
"
autowrap_mode = 3

[node name="AnswerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Answer"
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="Candidate" type="TextureRect" parent="."]
offset_left = 11.0
offset_top = 72.0
offset_right = 803.0
offset_bottom = 1261.16
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_d64n1")
expand_mode = 5

[node name="Employer" type="TextureRect" parent="."]
offset_left = 660.0
offset_top = 7.0
offset_right = 1452.0
offset_bottom = 1196.16
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_5i2k0")
expand_mode = 5

[node name="Label" type="Label" parent="."]
offset_left = 126.0
offset_right = 275.0
offset_bottom = 23.0
text = "Interview with Cleo"
